fixed issues with navbar on mobile devices

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,7 @@
 
 $nav-height: 100px;
 $nav-height-sm: 75px;
+$nav-height-xs: 50px;
 $project-height: 400px;
 $project-height-md: 320px;
 $project-height-sm: 240px;
@@ -56,8 +57,8 @@ body {
         transition: transform 0.2s;
         z-index: 30;
 
-        @media (max-width: 700px) {
-            height: $nav-height-sm;
+        @media (max-width: 850px) {
+            height: $nav-height-xs;
         }
 
         .header-flex {
@@ -82,8 +83,8 @@ body {
                 }
 
                 @media (max-width: 930px) {
-                    width: 55px;
-                    height: 55px;
+                    width: 35px;
+                    height: 35px;
                 }
             }
 
